name:                oauth2-simple
version:             0.1.1.0
synopsis:            A simple OAuth2 library
description:         This library provides oauth2 in 3 steps.

                        * Get a mutable state to track auth attempts and prevent
                          forgery.
                        * For a given OAuth provider (resource owner), acquire a
                          fresh URL for user applicaton authentication and
                          post-authentication redirect.
                        * On redirect verify the freshness of the login, verify
                          the authentication code with the provider, obtain and
                          return an access token (for use with the resource
                          owner).
license:             BSD3
license-file:        LICENSE
author:              Thomas M. DuBuisson
maintainer:          tommd@galois.com
copyright:           Galois Inc 2018
category:            Web
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

flag ghoa
    description: Build the ghoa example program
    default: False

library
  exposed-modules:     Network.OAuth2
  other-modules:
  other-extensions:    MultiParamTypeClasses, FlexibleInstances, OverloadedStrings, DataKinds, DeriveGeneric, TypeOperators
  build-depends:       base >= 4.7 && < 5
                     , aeson >= 2
                     , binary
                     , conduit
                     , bytestring >= 0.10
                     , http-conduit
                     , text >= 1.2
                     , time
                     , unordered-containers
                     , base58-bytestring
                     , cryptohash-sha256
                     , crypto-api
                     , entropy
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:       -Wall -Werror -freverse-errors

executable test-ghoa
  if(flag(ghoa))
    buildable: True
  else
    buildable : False
  main-is:              Main.hs
  hs-source-dirs:       test
  build-depends:        oauth2-simple,
                        base,
                        lucid,servant-lucid,servant-server>=0.16,servant,warp,text
  default-language:     Haskell2010
  ghc-options:          -Wall -Werror
  -- type:                 exitcode-stdio-1.0
